# nyaadl

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish-test.yml  python-publish.yml
src/nyaadl/: __init__.py  __main__.py  cli.py  config.py  executor.py  nyaa.py
