[metadata]
name = nyaadl
author = Tina
description = A simple static website generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tina-otoge/sssimp

[options]
packages = find:
package_dir = = src
install_requires =
	appdirs
	requests
	BeautifulSoup4
	pyyaml
	simple-term-menu

[options.entry_points]
console_scripts =
	nyaadl = nyaadl.__main__:main

[options.packages.find]
where = src
